import { DataTypes } from 'sequelize';

export function defineProductModel(sequelize) {
return sequelize.define('Product', {
	id: { type: DataTypes.INTEGER, primaryKey: true, autoIncrement: true },
	name: { type: DataTypes.STRING, allowNull: false },
	category: { type: DataTypes.STRING, allowNull: false },
	price: { type: DataTypes.FLOAT, allowNull: false },
})
}
