@startuml logical-view
!theme plain
skinparam packageStyle rectangle

title Logical View - Laboratory 6: Saga Orchestrated Pattern

package "Auth Service" {
  class User {
    +id: Integer [PK]
    +username: String [unique]
    +password_hash: String
    +role: Enum(admin, employee, logistics, analyst, customer)
    +store_id: Integer [FK]
    +email: String
    +is_active: Boolean
    +created_at: Timestamp
    +updated_at: Timestamp
  }
}

package "Store Service" {
  class Store {
    +id: UUID [PK]
    +name: String
    +address: String
    +manager_id: UUID [FK]
    +is_active: Boolean
    +created_at: Timestamp
    +updated_at: Timestamp
  }
  
  class Product {
    +id: UUID [PK]
    +name: String
    +description: Text
    +price: Decimal(10,2)
    +category: String
    +store_id: UUID [FK]
    +is_active: Boolean
    +created_at: Timestamp
    +updated_at: Timestamp
  }
  
  class Inventory {
    +id: UUID [PK]
    +store_id: UUID [FK]
    +product_id: UUID [FK]
    +quantity: Integer
    +min_threshold: Integer
    +max_threshold: Integer
    +last_updated: Timestamp
  }
  
  class Sale {
    +id: UUID [PK]
    +store_id: UUID [FK]
    +product_id: UUID [FK]
    +user_id: UUID [FK]
    +quantity: Integer
    +unit_price: Decimal(10,2)
    +total_price: Decimal(10,2)
    +sale_date: Timestamp
  }
  
  class StockReservation {
    +id: UUID [PK]
    +product_id: UUID [FK]
    +store_id: UUID [FK]
    +quantity: Integer
    +reserved_quantity: Integer
    +status: Enum(PENDING, COMMITTED, RELEASED, EXPIRED)
    +saga_id: UUID [FK]
    +correlation_id: UUID
    +expires_at: Timestamp
    +created_at: Timestamp
    +updated_at: Timestamp
    +committed_at: Timestamp
    +released_at: Timestamp
  }
}

package "E-commerce Service" {
  class CartItem {
    +id: UUID [PK]
    +user_id: UUID [FK]
    +product_id: UUID [FK]
    +product_name: String
    +product_price: Decimal(10,2)
    +quantity: Integer
    +created_at: Timestamp
    +updated_at: Timestamp
  }
  
  class Order {
    +id: UUID [PK]
    +order_number: String [unique]
    +user_id: UUID [FK]
    +status: Enum(pending, confirmed, processing, shipped, delivered, cancelled)
    +total_amount: Decimal(10,2)
    +items: JSONB
    +shipping_address: JSONB
    +billing_address: JSONB
    +payment_method: JSONB
    +payment_status: Enum(pending, processing, completed, failed, refunded)
    +saga_id: UUID [FK]
    +created_at: Timestamp
    +updated_at: Timestamp
  }
  
  class SagaInstance {
    +id: UUID [PK]
    +type: String
    +data: JSONB
    +state: Enum(PENDING, RUNNING, COMPLETED, FAILED, COMPENSATING, COMPENSATED)
    +current_step: Integer
    +completed_steps: JSONB
    +failed_steps: JSONB
    +compensation_steps: JSONB
    +correlation_id: UUID
    +created_at: Timestamp
    +updated_at: Timestamp
    +completed_at: Timestamp
    +failed_at: Timestamp
  }
  
  class PaymentTransaction {
    +id: UUID [PK]
    +order_id: UUID [FK]
    +amount: Decimal(10,2)
    +currency: String
    +payment_method: String
    +provider_transaction_id: String
    +status: Enum(PENDING, PROCESSING, COMPLETED, FAILED, REFUNDED)
    +saga_id: UUID [FK]
    +correlation_id: UUID
    +metadata: JSONB
    +processed_at: Timestamp
    +refunded_at: Timestamp
    +created_at: Timestamp
    +updated_at: Timestamp
  }
}

' Database Relationships
User ||--o{ Sale : creates
User ||--o{ CartItem : has
User ||--o{ Order : places
Store ||--o{ User : employs
Store ||--o{ Product : contains
Store ||--o{ Sale : records
Store ||--o{ Inventory : manages
Store ||--o{ StockReservation : manages
Product ||--o{ Sale : sold_in
Product ||--o{ CartItem : added_as
Product ||--o{ Inventory : tracked_in
Product ||--o{ StockReservation : reserved_in
SagaInstance ||--o{ Order : orchestrates
SagaInstance ||--o{ PaymentTransaction : coordinates
SagaInstance ||--o{ StockReservation : manages
Order ||--o{ PaymentTransaction : involves

@enduml
    - userId: Integer
    - ipAddress: String
    - userAgent: String
    - success: Boolean
    - loginTime: DateTime
    --
    + isSuccessful(): Boolean
    + getLoginAttempts(timeframe: Duration): Integer
  }
}

package "Saga Orchestration Domain" <<Rectangle>> {
  
  class SagaOrchestrator {
    - sagaRepository: SagaRepository
    - sagaStateMachine: SagaStateMachine
    --
    + startSaga(type: String, data: Object): UUID
    + executeSaga(sagaId: UUID): void
    + executeStep(sagaInstance: SagaInstance, step: Object): Object
    + initiateCompensation(sagaInstance: SagaInstance, error: Error): void
    + compensateStep(sagaInstance: SagaInstance, step: Object): void
  }
  
  class SagaStateMachine {
    - sagaDefinitions: Map<String, Object>
    --
    + getSteps(sagaType: String): List<Object>
    + getCompensationSteps(sagaType: String): List<Object>
    + getNextStep(sagaType: String, currentStep: Integer): Object
  }
  
  class SagaRepository {
    --
    + save(sagaInstance: SagaInstance): void
    + findById(id: UUID): SagaInstance
    + findByState(state: String): List<SagaInstance>
    + update(sagaInstance: SagaInstance): void
    + findActiveSagas(): List<SagaInstance>
  }
  
  enum SagaState {
    PENDING
    RUNNING
    COMPLETED
    FAILED
    COMPENSATING
    COMPENSATED
  }
  
  enum ReservationStatus {
    PENDING
    COMMITTED
    RELEASED
    EXPIRED
  }
  
  enum PaymentStatus {
    PENDING
    PROCESSING
    COMPLETED
    FAILED
    REFUNDED
  }
}

package "Authentication Domain" <<Rectangle>> {
  
  class JWTToken {
    - sub: String (userId)
    - username: String
    - role: String
    - storeId: Integer?
    - aud: List<String>
    - iss: String
    - exp: Long
    - iat: Long
    --
    + isValid(): Boolean
    + isExpired(): Boolean
    + hasAudience(audience: String): Boolean
    + hasRole(role: String): Boolean
  }
  
  class AuthSession {
    - token: JWTToken
    - user: User
    - createdAt: DateTime
    - lastAccessed: DateTime
    --
    + isActive(): Boolean
    + refresh(): JWTToken
    + invalidate(): void
  }
}

' Relationships
User ||--o{ Sale : "makes"
User }o--|| Store : "works at"
Store ||--o{ Inventory : "has"
Product ||--o{ Inventory : "stocked in"
Product ||--o{ Sale : "sold as"
Store ||--o{ Sale : "processes"
Sale }o--|| Product : "references"

' Saga Relationships
SagaOrchestrator --> SagaRepository : uses
SagaOrchestrator --> SagaStateMachine : uses
SagaOrchestrator --> SagaInstance : orchestrates
SagaInstance::state --> SagaState
StockReservation::status --> ReservationStatus
PaymentTransaction::status --> PaymentStatus

User ||--o{ LoginLog : "generates"
User ||--o{ AuthSession : "has"
AuthSession ||--|| JWTToken : "contains"

User ||--o{ Cart : "owns"
Cart ||--o{ CartItem : "contains"
CartItem }o--|| Product : "references"
Cart ||--o{ Order : "generates"

SalesReport ||--o{ StoreSummary : "contains"
StoreSummary }o--|| Store : "summarizes"

' Value Objects and Enumerations
enum UserRole {
  ADMIN
  EMPLOYEE
  ANALYST
}

enum ProductCategory {
  BEVERAGES
  SNACKS
  DAIRY
  BAKERY
  FROZEN
  OTHER
}

class DateRange <<ValueObject>> {
  - startDate: Date
  - endDate: Date
  --
  + contains(date: Date): Boolean
  + getDuration(): Duration
}

User::role --> UserRole
Product::category --> ProductCategory
SalesReport --> DateRange

note top of User : "Central entity for authentication\nand authorization across all services"

note right of Sale : "Core transaction entity\ntracked for reporting and analytics"

note left of SagaInstance : "Orchestrates distributed transactions\nacross microservices with compensation"

note bottom of JWTToken : "Stateless authentication token\nwith role-based access control"

note right of StockReservation : "Temporary stock holds during\nsaga execution with auto-expiration"

note left of PaymentTransaction : "Payment processing with\ncompensation support for refunds"

@enduml
